test: update and expand test suite for themes, alerts, and validation
- ThemeServiceTest: cover getThemeHistory and updated signal composition
- AlertRulesEngineTest: add coverage for new cross-horizon RS divergence
  and macro-sector mismatch rules
- SubSectorControllerIT: @SpringBootTest integration tests for @Validated
  @Pattern on parent parameter (validation not fired in standalone MockMvc)
- MacroControllerIT, SignalControllerIT: validate @Min/@Max constraints
  via integration test (SpringBootTest + MockitoBean)
- BacktestEngineTest: adapt to BacktestResult.stripped() refactor
- Other tests: minor adjustments for renamed fields and new caches

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>