@@ -5,16 +5,18 @@ import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.Mockito.when;
 
 import com.ftm.app.api.dto.ThemeDetailDto;
+import com.ftm.app.api.dto.ThemeHistoryPointDto;
 import com.ftm.app.api.dto.ThemeSummaryDto;
 import com.ftm.app.api.repository.CategoryRepository;
+import com.ftm.app.domain.Category;
 import com.ftm.app.domain.CategoryId;
 import com.ftm.app.domain.CategoryType;
 import com.ftm.app.domain.SignalType;
 import com.ftm.app.domain.Theme;
-import com.ftm.app.domain.Category;
 import com.ftm.app.signals.repository.SignalRepository;
 import com.ftm.app.themes.repository.ThemeRepository;
 import java.math.BigDecimal;
+import java.time.LocalDate;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
@@ -60,21 +62,25 @@ class ThemeServiceTest {
   @DisplayName("getThemes aggregates composite score as average of constituent scores")
   void shouldAggregateCompositeScoreAsAverage() {
     when(themeRepository.findAll()).thenReturn(List.of(theme("AI_INFRA", "AI Infrastructure")));
-    when(themeRepository.findAllConstituentsByTheme()).thenReturn(
-        Map.of("AI_INFRA", List.of("SEMI", "AIRO")));
-    when(categoryRepository.findAllByActiveTrueOrderByDisplayOrderAsc()).thenReturn(List.of(
-        category(CategoryId.SEMI, "Semiconductors", "SMH"),
-        category(CategoryId.AIRO, "AI & Robotics", "BOTZ")));
-    when(signalRepository.findLatestByTypes(org.mockito.ArgumentMatchers.anyList())).thenReturn(
-        Map.of(
-            SignalType.COMPOSITE, Map.of("SEMI", new BigDecimal("0.80"), "AIRO", new BigDecimal("0.60")),
-            SignalType.RS_60, Collections.emptyMap(),
-            SignalType.FLOW_20D, Collections.emptyMap(),
-            SignalType.COMPOSITE_TREND_20D, Collections.emptyMap(),
-            SignalType.RRG_QUADRANT, Collections.emptyMap(),
-            SignalType.MACRO_FIT, Collections.emptyMap(),
-            SignalType.RS_120, Collections.emptyMap(),
-            SignalType.COMPOSITE_TREND_5D, Collections.emptyMap()));
+    when(themeRepository.findAllConstituentsByTheme())
+        .thenReturn(Map.of("AI_INFRA", List.of("SEMI", "AIRO")));
+    when(categoryRepository.findAllByActiveTrueOrderByDisplayOrderAsc())
+        .thenReturn(
+            List.of(
+                category(CategoryId.SEMI, "Semiconductors", "SMH"),
+                category(CategoryId.AIRO, "AI & Robotics", "BOTZ")));
+    when(signalRepository.findLatestByTypes(org.mockito.ArgumentMatchers.anyList()))
+        .thenReturn(
+            Map.of(
+                SignalType.COMPOSITE,
+                    Map.of("SEMI", new BigDecimal("0.80"), "AIRO", new BigDecimal("0.60")),
+                SignalType.RS_60, Collections.emptyMap(),
+                SignalType.FLOW_20D, Collections.emptyMap(),
+                SignalType.COMPOSITE_TREND_20D, Collections.emptyMap(),
+                SignalType.RRG_QUADRANT, Collections.emptyMap(),
+                SignalType.MACRO_FIT, Collections.emptyMap(),
+                SignalType.RS_120, Collections.emptyMap(),
+                SignalType.COMPOSITE_TREND_5D, Collections.emptyMap()));
 
     List<ThemeSummaryDto> result = themeService.getThemes();
 
@@ -89,21 +95,27 @@ class ThemeServiceTest {
   @DisplayName("getThemes computes BUY dominant signal when majority constituents are bullish")
   void shouldComputeBuyDominantSignalWhenMajorityBullish() {
     when(themeRepository.findAll()).thenReturn(List.of(theme("AI_INFRA", "AI Infrastructure")));
-    when(themeRepository.findAllConstituentsByTheme()).thenReturn(
-        Map.of("AI_INFRA", List.of("SEMI", "AIRO")));
-    when(categoryRepository.findAllByActiveTrueOrderByDisplayOrderAsc()).thenReturn(List.of(
-        category(CategoryId.SEMI, "Semiconductors", "SMH"),
-        category(CategoryId.AIRO, "AI & Robotics", "BOTZ")));
-    when(signalRepository.findLatestByTypes(org.mockito.ArgumentMatchers.anyList())).thenReturn(
-        Map.of(
-            SignalType.COMPOSITE, Map.of("SEMI", new BigDecimal("0.80"), "AIRO", new BigDecimal("0.78")),
-            SignalType.RRG_QUADRANT, Map.of("SEMI", new BigDecimal("4"), "AIRO", new BigDecimal("4")),
-            SignalType.COMPOSITE_TREND_20D, Map.of("SEMI", new BigDecimal("0.02"), "AIRO", new BigDecimal("0.01")),
-            SignalType.RS_60, Collections.emptyMap(),
-            SignalType.FLOW_20D, Collections.emptyMap(),
-            SignalType.MACRO_FIT, Collections.emptyMap(),
-            SignalType.RS_120, Collections.emptyMap(),
-            SignalType.COMPOSITE_TREND_5D, Collections.emptyMap()));
+    when(themeRepository.findAllConstituentsByTheme())
+        .thenReturn(Map.of("AI_INFRA", List.of("SEMI", "AIRO")));
+    when(categoryRepository.findAllByActiveTrueOrderByDisplayOrderAsc())
+        .thenReturn(
+            List.of(
+                category(CategoryId.SEMI, "Semiconductors", "SMH"),
+                category(CategoryId.AIRO, "AI & Robotics", "BOTZ")));
+    when(signalRepository.findLatestByTypes(org.mockito.ArgumentMatchers.anyList()))
+        .thenReturn(
+            Map.of(
+                SignalType.COMPOSITE,
+                    Map.of("SEMI", new BigDecimal("0.80"), "AIRO", new BigDecimal("0.78")),
+                SignalType.RRG_QUADRANT,
+                    Map.of("SEMI", new BigDecimal("4"), "AIRO", new BigDecimal("4")),
+                SignalType.COMPOSITE_TREND_20D,
+                    Map.of("SEMI", new BigDecimal("0.02"), "AIRO", new BigDecimal("0.01")),
+                SignalType.RS_60, Collections.emptyMap(),
+                SignalType.FLOW_20D, Collections.emptyMap(),
+                SignalType.MACRO_FIT, Collections.emptyMap(),
+                SignalType.RS_120, Collections.emptyMap(),
+                SignalType.COMPOSITE_TREND_5D, Collections.emptyMap()));
 
     List<ThemeSummaryDto> result = themeService.getThemes();
 
@@ -123,24 +135,73 @@ class ThemeServiceTest {
   }
 
   @Test
+  @DisplayName("getThemeHistory returns empty list when theme has no signal data")
+  void shouldReturnEmptyHistoryWhenNoSignalsExist() {
+    when(themeRepository.existsById("AI_INFRA")).thenReturn(true);
+    when(themeRepository.findConstituentIds("AI_INFRA")).thenReturn(List.of("SEMI", "AIRO"));
+    when(signalRepository.findAverageCompositeByDate(List.of("SEMI", "AIRO"), 30))
+        .thenReturn(List.of());
+
+    List<ThemeHistoryPointDto> result = themeService.getThemeHistory("AI_INFRA", 30);
+
+    assertThat(result).isEmpty();
+  }
+
+  @Test
+  @DisplayName("getThemeHistory returns daily composite averages in chronological order")
+  void shouldReturnChronologicalDailyAverages() {
+    LocalDate day1 = LocalDate.of(2025, 1, 2);
+    LocalDate day2 = LocalDate.of(2025, 1, 3);
+    when(themeRepository.existsById("AI_INFRA")).thenReturn(true);
+    when(themeRepository.findConstituentIds("AI_INFRA")).thenReturn(List.of("SEMI", "AIRO"));
+    when(signalRepository.findAverageCompositeByDate(List.of("SEMI", "AIRO"), 30))
+        .thenReturn(
+            List.of(
+                new SignalRepository.DateScore(day1, 0.60),
+                new SignalRepository.DateScore(day2, 0.70)));
+
+    List<ThemeHistoryPointDto> result = themeService.getThemeHistory("AI_INFRA", 30);
+
+    assertThat(result).hasSize(2);
+    assertThat(result.get(0).date()).isEqualTo("2025-01-02");
+    assertThat(result.get(0).compositeScore()).isEqualTo(0.60);
+    assertThat(result.get(1).date()).isEqualTo("2025-01-03");
+    assertThat(result.get(1).compositeScore()).isEqualTo(0.70);
+  }
+
+  @Test
+  @DisplayName("getThemeHistory throws NoSuchElementException for unknown theme")
+  void shouldThrowForUnknownThemeHistory() {
+    when(themeRepository.existsById("UNKNOWN")).thenReturn(false);
+
+    assertThatThrownBy(() -> themeService.getThemeHistory("UNKNOWN", 30))
+        .isInstanceOf(NoSuchElementException.class)
+        .hasMessageContaining("UNKNOWN");
+  }
+
+  @Test
   @DisplayName("getTheme returns detail with all constituents sorted by composite score")
   void shouldReturnThemeDetailWithConstituentsSortedByScore() {
     when(themeRepository.findAll()).thenReturn(List.of(theme("AI_INFRA", "AI Infrastructure")));
-    when(themeRepository.findAllConstituentsByTheme()).thenReturn(
-        Map.of("AI_INFRA", List.of("SEMI", "AIRO")));
-    when(categoryRepository.findAllByActiveTrueOrderByDisplayOrderAsc()).thenReturn(List.of(
-        category(CategoryId.SEMI, "Semiconductors", "SMH"),
-        category(CategoryId.AIRO, "AI & Robotics", "BOTZ")));
-    when(signalRepository.findLatestByTypes(org.mockito.ArgumentMatchers.anyList())).thenReturn(
-        Map.of(
-            SignalType.COMPOSITE, Map.of("SEMI", new BigDecimal("0.60"), "AIRO", new BigDecimal("0.80")),
-            SignalType.RS_60, Collections.emptyMap(),
-            SignalType.FLOW_20D, Collections.emptyMap(),
-            SignalType.COMPOSITE_TREND_20D, Collections.emptyMap(),
-            SignalType.RRG_QUADRANT, Collections.emptyMap(),
-            SignalType.MACRO_FIT, Collections.emptyMap(),
-            SignalType.RS_120, Collections.emptyMap(),
-            SignalType.COMPOSITE_TREND_5D, Collections.emptyMap()));
+    when(themeRepository.findAllConstituentsByTheme())
+        .thenReturn(Map.of("AI_INFRA", List.of("SEMI", "AIRO")));
+    when(categoryRepository.findAllByActiveTrueOrderByDisplayOrderAsc())
+        .thenReturn(
+            List.of(
+                category(CategoryId.SEMI, "Semiconductors", "SMH"),
+                category(CategoryId.AIRO, "AI & Robotics", "BOTZ")));
+    when(signalRepository.findLatestByTypes(org.mockito.ArgumentMatchers.anyList()))
+        .thenReturn(
+            Map.of(
+                SignalType.COMPOSITE,
+                    Map.of("SEMI", new BigDecimal("0.60"), "AIRO", new BigDecimal("0.80")),
+                SignalType.RS_60, Collections.emptyMap(),
+                SignalType.FLOW_20D, Collections.emptyMap(),
+                SignalType.COMPOSITE_TREND_20D, Collections.emptyMap(),
+                SignalType.RRG_QUADRANT, Collections.emptyMap(),
+                SignalType.MACRO_FIT, Collections.emptyMap(),
+                SignalType.RS_120, Collections.emptyMap(),
+                SignalType.COMPOSITE_TREND_5D, Collections.emptyMap()));
 
     ThemeDetailDto detail = themeService.getTheme("AI_INFRA");
 
